--- a/kastolagyo/package.json
+++ b/kastolagyo/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@radix-ui/react-slot": "^1.1.0",
     "antd": "^5.21.6",
     "next": "15.0.2",
